--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -1,12 +1,71 @@
-<!DOCTYPE html>
-<html>
-    <head>
-        <meta charset="UTF-8">
-        <title>{% block title %}Welcome!{% endblock %}</title>
-        {% block stylesheets %}{% endblock %}
-    </head>
-    <body>
-        {% block body %}{% endblock %}
-        {% block javascripts %}{% endblock %}
-    </body>
-</html>
+{# templates/base.html.twig #}
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml">
+
+<head>
+	<meta charset="utf-8">
+	<meta name="viewport"    content="width=device-width, initial-scale=1.0">
+	
+	<title>{% block title %}Jeunesse Ivoirienne Solidaire{% endblock %}</title>
+
+	 {% block stylesheets %}
+	<link rel="shortcut icon" href="{{ asset('assets/images/gt_favicon.png') }}">
+	<link rel="stylesheet" media="screen" href="http://fonts.googleapis.com/css?family=Open+Sans:300,400,700">
+    <link href="{{ asset('assets/css/bootstrap.min.css') }}" rel="stylesheet">
+    <link href="{{ asset('assets/css/font-awesome.min.css') }}" rel="stylesheet">
+    <link href="{{ asset('assets/css/bootstrap-theme.css') }}" rel="stylesheet">
+    <link href="{{ asset('assets/css/main.css') }}" rel="stylesheet">
+	<script src="assets/js/html5shiv.js"></script>
+	<script src="assets/js/respond.min.js"></script>
+    {% endblock %}
+</head>
+<body>
+ <header class="container" >
+ {% block nav %}
+<div class="home">
+	<!-- Fixed navbar -->
+	<div class="navbar navbar-inverse navbar-fixed-top headroom" >
+		<div class="container">
+			<div class="navbar-header">
+				<!-- Button for smallest screens -->
+				<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse"><span class="icon-bar"></span> <span class="icon-bar"></span> <span class="icon-bar"></span> </button>
+				<a class="navbar-brand" href="{{ path('home') }}"><img src="{{ asset('assets/images/logo_v2.png') }}"   width="300" height="100" class="d-inline-block align-top" alt="jis HTML5 template"></a>
+				{# <a class="navbar-brand" href="index.html"><img src="{{ asset('assets/images/logo.png') }}" alt="Progressus HTML5 template"></a> #}
+
+			</div>
+			<div class="navbar-collapse collapse">
+				<ul class="nav navbar-nav pull-right">
+					<li class="active"><a href="{{ path('home') }}" > Home</a></li>
+					<li><a href="{{ path('home_about') }}">About</a></li>
+					<li class="dropdown">
+						<a href="#" class="dropdown-toggle" data-toggle="dropdown">More Pages <b class="caret"></b></a>
+						<ul class="dropdown-menu">
+							<li><a href="sidebar-left.html">Left Sidebar</a></li>
+							<li class="active"><a href="sidebar-right.html">Right Sidebar</a></li>
+						</ul>
+					</li>
+					<li class="active"><a href="{{ path('home_contact') }}">Contact</a></li>
+					<li class="dropdown">
+						<a href="#" class="dropdown-toggle" data-toggle="dropdown">CONNEXION-INSCRIPTION <b class="caret"></b></a>
+						<ul class="dropdown-menu">
+          {% if is_granted('ROLE_SYMPATHISANT') %}
+							<li><a href="{{ path('logout') }}">Deconnexion</a></li>
+
+          {% else %}
+						<li><a href="{{ path('login') }}">connexion</a></li>
+						<li><a href="{{ path('app_register') }}">Inscription</a></li>
+		  {% endif %}
+						</ul>
+					</li>
+				</ul>
+			</div><!--/.nav-collapse -->
+		</div>
+ {% endblock nav %}
+ 
+	<!-- /.navbar -->
+{% block body %}{% endblock body %}
+{% block footer %}{% endblock footer %}
+{% block javascripts %}{% endblock javascripts %}
+</header>
+</body>
+ </html> 
