--- a/templates/registration/login.html.twig
+++ b/templates/registration/login.html.twig
@@ -4,7 +4,7 @@
 
         <h3> CONNEXION </h3>
 <div class="alert alert-success" role="alert">
-  Entrez votre identifiant à 13 chiffres ex 0033620202020, puis votre code secret.
+  Entrez votre identifiant (plus de trois chiffres), puis votre code secret.
 </div>
         {% if error %}
             <div>{{ error.messageKey|trans(error.messageData, 'security') }}</div>
@@ -13,19 +13,20 @@
         <form action="{{ path('login') }}" method="post">
             
         <div class="form-group">
-            <label for="username">Username</label>
+            <label for="username">Identifiant</label>
             <input type="text" style="background-color:powderblue" id="username" name="_username" value="{{ last_username }}" />
         </div>
          <div class="form-group">
-            <label for="password">Password</label>
+            <label for="password">Mot de passe</label>
             <input type="password" style="background-color:powderblue" id="password" name="_password" required="required" autocomplete="current-password" />
         </div> 
          <div class="form-group">     
             <input type="checkbox" id="remember_me" name="_remember_me" value="on" />
             <label for="remember_me">{{ 'security.login.remember_me'|trans }}</label>
          </div> 
-            <button type="submit" class="label label-success"><h6>Connexion!</h6> </button>
-			<a href="{{ 'forgetpass' }}"><p><h4><span class="label label-warning">Mot de passe oublié!</span></h4></p></a>
+            <button type="submit" class="label label-success"><h8>Connexion!</h8> </button>
+			<a href="{{ path('home') }}"><p><h6><span class="label label-warning">Annuler</span></h6></p></a>
+			<a href="{{ 'forgetpass' }}"><p><h6><span class="label label-info">Mot de passe oublié!</span></h6></p></a>
         </form>     
 </div>
 {% endblock %}
